--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
         "postcss": "^8.4.31",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "tailwindcss": "^3.2.1",
+        "tailwindcss": "^3.4.17",
         "typescript": "^5.0.2",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "daisyui": "^5.0.0"
     }
 }
